# wg-ondemand

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  FEDORA_PACKAGING.md  LICENSE  README.md  RELEASE.md  flake.nix  install.sh  uninstall.sh  wg-ondemand.service  wg-ondemand.spec
.cargo/: config.toml
.copr/: Makefile
.github/workflows/: ci.yml  release.yml  rpm.yml
config/: wg-ondemand.toml
scripts/: build-rpm.sh  install.sh  quick-install.sh  setup-tc.sh  uninstall.sh  wg-ondemand-ctl
systemd/: wg-ondemand.service
ui/: README.md  install-waybar-widget.sh  waybar-wg-ondemand.sh  wg-ondemand-menu.xml
wg-ondemand/: Cargo.toml
wg-ondemand-ebpf/: Cargo.toml
wg-ondemand-ebpf/src/: main.rs
wg-ondemand/src/: config.rs  ebpf_loader.rs  lib.rs  main.rs  route_manager.rs  ssid_monitor.rs  state.rs  state_file.rs  types.rs  wg_controller.rs
xtask/: Cargo.toml
xtask/src/: main.rs
