[workspace]
members = ["wg-ondemand", "wg-ondemand-ebpf", "xtask"]
resolver = "2"

[workspace.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1", features = [
    "rt-multi-thread",  # Async runtime (required)
    "macros",           # #[tokio::main] macro
    "time",             # interval() for timers
    "sync",             # mpsc channels
    "process",          # Command spawning for wg-quick/nmcli
    "signal",           # SIGTERM/SIGINT handling
] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zbus = "4.0"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
wireguard-control = "1.7"
if-addrs = "0.13"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
