[package]
name = "wg-ondemand"
version = "0.1.0"
edition = "2021"

[dependencies]
aya.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
toml.workspace = true
zbus.workspace = true
clap.workspace = true
futures-util.workspace = true
wireguard-control.workspace = true
if-addrs.workspace = true

[lib]
name = "wg_ondemand"
path = "src/lib.rs"

[[bin]]
name = "wg-ondemand"
path = "src/main.rs"
